clusters/offsite/apps/spindrift/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spindrift
  labels:
    kustomize.toolkit.fluxcd.io/prune: enabled
    lolwtf.ca/sandbox-exec: deny
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
